feat: auto word images as platform-wide setting
